coverage test 50 - 100 - 80 - 80